# siem/service/src/main/java/bsep/sw/util/StandardResponses.java
@@ -5,7 +5,7 @@ import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 
 public abstract class StandardResponses {
-    public ResponseEntity<ErrorResponse> unauthorized() {
-        return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(new ErrorResponse("401", "Unauthorized", "Please login first."));
+    protected ResponseEntity<ErrorResponse> unauthorized() {
+        return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(new ErrorResponse("STA-401", "Unauthorized", "Please login first."));
     }
 }
